syntax = "proto3";

option csharp_namespace = "Saapp.AndroidAPI.Endpoints.GRPC.Warehouse.PartialSeparation.Protos";
option java_package = "com.saphamrah.protos";
option java_outer_classname = "PartialSeparationProto";
package Warehouse;


service PartialSeparation{
  rpc GetPartialSeparation(PartialSeparationRequest) returns(PartialSeparationReplyList);
}

message PartialSeparationRequest{
  string DraftInvoiceRequestsID = 1;
  string DefiniteInvoiceRequestsID = 2;
}

message PartialSeparationReply
{
  int64	PartialSeparationID = 1;
  int32	PartialSeparationNumber = 2;
  int32 StatusCode = 3;
}

message PartialSeparationReplyList{
  repeated PartialSeparationReply PartialSeparations = 1;
}

